docs: enrich Step 28 to full micro-anatomy (Phase-E capstone)